Revision history for Sys-Virt-IO-Async

0.0.4    to-be-released
         * Prepare for Sys::Virt::EventImpl being split out of
           Sys::Virt::Event soonish (and backward compatibility to
           remain in place "only" until mid 2025)
         * Rename Sys::Virt::IO::Async::Event to
           Sys::Virt::IO::Async::EventImpl
         * Make the event implementation a notifier so it can be
           a container for handles and timers
         * Add Sys::Virt::IO::Async, a notifier & wrapper
           around Sys::Virt

0.0.3    2023-06-05
         * Fix POD error
         * Always pass HANDLE_ERROR and HANDLE_HANGUP events,
           even when the caller didn't ask for them
         * Clean up the $opaque value after remove_{handle,timeout}
           returned, fixing a mutex deadlock (thanks DANBERR)

0.0.2    2023-06-03
         * Fix dist not being indexed
         * Add $VERSION variable to modules

0.0.1    2023-06-03
         * Initial release